hphp/hack/test/typecheck/trait_diamond_1b.php.exp
File "trait_diamond_1b.php", line 13, characters 1-30:
Cannot use unstable feature: `method_trait_diamond` (Parsing[1002])
